--- a/css/custom.css
+++ b/css/custom.css
@@ -1,21 +1,14 @@
-/* width *//*
-::-webkit-scrollbar {
-  width: 10px;
-}
-*/
-/* Track *//*
-::-webkit-scrollbar-track {
-  background: #f1f1f1; 
-}
- */
-/* Handle *//*
-::-webkit-scrollbar-thumb {
-  background: #888; 
-}
-*/
-/* Handle on hover *//*
-::-webkit-scrollbar-thumb:hover {
-  background: #555; 
+/***** Text formatierungen *****/
+
+.subtitle-1 {
+    font-size: 1rem;
+    margin-bottom: 10px;
+    color: #ffc107;
 }
 
-*/
+.back-to-top {
+    position: fixed;
+    bottom: 25px;
+    right: 25px;
+    display: none;
+}
